# polars-hot-reload

./: Cargo.toml  README.md  run.sh
lib/: Cargo.toml
lib/src/: lib.rs
polars-dynamic/: Cargo.toml
src/: main.rs
